# factory_example

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  reinstall-cmake.sh
factory_dynamic/: CMakeLists.txt
factory_dynamic/dyn_lib/: CMakeLists.txt  object1_factory_impl.cpp  object1_factory_impl.hpp  object1_impl.cpp  object1_impl.hpp  object2_factory_impl.hpp
factory_dynamic/dyn_lib1/: CMakeLists.txt  object1_factory_impl.cpp  object2_factory_impl.cpp  object2_impl.cpp  object2_impl.hpp
factory_dynamic/dyn_lib2/: CMakeLists.txt
factory_dynamic/factory_lib/: CMakeLists.txt  factory_basic.hpp  factory_lib.cpp  factory_object_1.hpp  factory_object_2.hpp
factory_dynamic/factory_lib/include/: basic_factory.hpp  exp_macro.hpp  factory_object_1.hpp  factory_object_2.hpp
factory_dynamic/factory_lib/src/: factory_object_1.cpp  factory_object_2.cpp
factory_dynamic/main_program/: CMakeLists.txt  main.cpp  plugin.hpp  plugin_lin.cpp  plugin_win.cpp
factory_simple/: CMakeLists.txt  base.hpp  constants.cpp  constants.hpp  derived.cpp  main.cpp
src/: CMakeLists.txt  base.hpp  constants.cpp  constants.hpp  derived.cpp  derived.hpp  derived1.cpp  derived1.hpp  derived2.cpp  derived2.hpp  factory.cpp  factory.hpp  main.cpp
